--- a/index.html
+++ b/index.html
@@ -25,17 +25,22 @@
 
         <div class="conversion-unit">
             <p class="conversion-unit-title">Length (Meter/Feet)</p>
-            <p><span class="user-num">0</span> meters = <span class="conversion-result">0</span> feet | <span class="user-num">0</span> feet = <span class="conversion-result">0</span> meters</p>
+            <p><span class="user-num">0</span> meters = <span class="conversion-result">0</span> feet | 
+                <span class="user-num">0</span> feet = <span class="conversion-result">0</span> meters
+            </p>
         </div>
         <div class="conversion-unit">
             <p class="conversion-unit-title">Volume (Liters/Gallons)</p>
-            <p><span class="user-num">0</span> liters = <span class="conversion-result">0</span> gallons | <span class="user-num">0</span> gallons = <span class="conversion-result">0</span> liters</p>
+            <p><span class="user-num">0</span> liters = <span class="conversion-result">0</span> gallons | 
+                <span class="user-num">0</span> gallons = <span class="conversion-result">0</span> liters
+            </p>
         </div>
         <div class="conversion-unit">
             <p class="conversion-unit-title">Mass (Kilograms/Pounds)</p>
-            <p><span class="user-num">0</span> kilos = <span class="conversion-result">0</span> pounds | <span class="user-num">0</span> pounds = <span class="conversion-result">0</span> kilos</p>
-        </div>
-        
+            <p><span class="user-num">0</span> kilos = <span class="conversion-result">0</span> pounds | 
+                <span class="user-num">0</span> pounds = <span class="conversion-result">0</span> kilos
+            </p>
+        </div>       
     </div>
 
 
